src/objects/Airports__x.object
<CustomObject>
    <description>Airports</description>
    <externalDataSource>TripPinService</externalDataSource>
    <externalName>Airports</externalName>
    <fields>
        <fullName>IataCode__c</fullName>
        <description>IataCode</description>
        <externalDeveloperName>IataCode</externalDeveloperName>
        <label>IataCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IcaoCode__c</fullName>
        <description>IcaoCode</description>
        <externalDeveloperName>IcaoCode</externalDeveloperName>
        <label>IcaoCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location</description>
        <externalDeveloperName>Location</externalDeveloperName>
        <label>Location</label>
        <length>32000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Airports</label>
    <pluralLabel>Airports</pluralLabel>
</CustomObject>